Bug 159897 - FILEOPEN DOCX Hyperlink with ScreenTip is imported broken
Summary: FILEOPEN DOCX Hyperlink with ScreenTip is imported broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2024-02-26 08:05 UTC by Gabor Kelemen (Collabora)
Modified: 2024-06-11 09:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 with hyperlinks + ScreenTip (11.49 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-02-26 08:05 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word 2016 and Writer master (95.61 KB, image/png)
2024-02-26 08:06 UTC, Gabor Kelemen (Collabora)
Details
The second link from the example file (80.79 KB, image/png)
2024-02-26 08:07 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-02-26 08:05:54 UTC
Created attachment 192775 [details]
Example file from Word 2016 with hyperlinks + ScreenTip

Attached example file contains a web and an email hyperlinks, with the ScreenTip set on both of them.
When opened in Writer, the ScreenTip is not imported ( it could be mapped to the Name field) and in case of the web link, the link is imported completely broken, with the current file path + the last word from the ScreenTip string imported as link target.
In case of the email link the link and text are correct, just the ScreenTip is missing.

1. Open attached file
2. Right click on the links -> Edit Hyperlink
-> broken link and missing ScreenTip

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8eee7eab8087590aa19bb9989c294e9be767f356
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Started to look like this sometime in 6.4, before the web link did not contain the current file path, only the last word of the Screentip - so differently broken before.
Comment 1 Gabor Kelemen (Collabora) 2024-02-26 08:06:52 UTC
Created attachment 192776 [details]
The example file in Word 2016 and Writer master
Comment 2 Gabor Kelemen (Collabora) 2024-02-26 08:07:34 UTC
Created attachment 192777 [details]
The second link from the example file
Comment 3 Gabor Kelemen (Collabora) 2024-02-27 00:36:20 UTC
This changed to the current state in:

https://git.libreoffice.org/core/+/4c30848c852c44cbad8509c770feed5244f1940f

author	Tünde Tóth <tundeth@gmail.com>	Thu Jul 18 15:10:26 2019 +0200
committer	László Németh <nemeth@numbertext.org>	Thu Jul 25 09:31:34 2019 +0200

tdf#123627 DOCX import: fix relative hyperlinks to documents
Comment 4 raal 2024-02-28 23:00:53 UTC
repro with Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fd948fd27356e703fffc7e46df0f0e3a22f57967
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 5 Commit Notification 2024-06-01 11:51:37 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c583b38bc96b397f1a742127ea7ac99cadd024f

tdf#159897 docx import: fix ScreenTip of hyperlink

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-11 09:28:34 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/efb805eb244ad9f0317083502412b5d38d7f048d

tdf#159897 docx import: fix broken hyperlink

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.