tdf#159897 docx import: fix ScreenTip of hyperlink

Note: if the ScreenTip contains double quote marks, the link will be
broken after the import

Change-Id: I4ed3e4e9e87335407e01d50cc5c440d04598a33f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168105
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>